# med-query

./: .gitignore  README.md  pyproject.toml
scripts/: explore_complex_queries.py  explore_fast_llm.py  explore_instruct_prompt.py  explore_llm_setup.py  explore_medical_classify.py  explore_mlx.py  explore_prompt_v2.py  explore_prompt_v3.py  explore_query_routing.py  explore_single_stage.py  gen_p1_dataset.py  gen_p2_dataset.py  setup_dev.sh
scripts/generators/: __init__.py  base.py  validate.py
scripts/prompts/: __init__.py  master.py  schemas.py
src/med_query/: __init__.py
src/medquery/: __init__.py  logging.py  types.py
src/medquery/backends/: __init__.py  api.py  base.py  mlx.py  prompts.py
src/medquery/eval/: __init__.py  cli.py  config.py  metrics.py  parsers.py  reports.py  runner.py  schemas.py  tui.py  validators.py
src/medquery/generators/: __init__.py  base.py  prompts.py  templates.py  validate.py
